add mercury orbit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<canvas id="canvas" width="1000" height="900"></canvas>
+<canvas id="canvas" width="300" height="300"></canvas>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Basic File</title>
+</head>
+<body>
+
+	<canvas id="canvas" ></canvas>
+
+
+	<!-- Note the script tag here as well as the "text/javascript" -->
+	<script src="system.js">
+
+	</script>
+</body>
+</html>
